# magnetic

yikun_research_common/: CMakeLists.txt  package.xml
yikun_research_common/include/yikun_research_common/computing/: pid.h  service.h
yikun_research_common/include/yikun_research_common/driver/: bms.h  magnetic.h  sonar.h
yikun_research_common/java/java/: MagNav_RFID.sh
yikun_research_common/java/java/src/: RFID_JAVA.java
yikun_research_common/src/: service_node.cpp  subcriber.cpp
yikun_research_common/src/computing/: pid.cpp  service.cpp
yikun_research_common/src/driver/: bms.cpp  magnetic.cpp  sonar.cpp  test.cpp
yikun_research_common/udp_demo/: Publisher.java
yikun_research_msgs/: CMakeLists.txt  package.xml
yikun_research_msgs/msg/: Application.msg
yikun_research_msgs/srv/: GetState.srv  Ismapping.srv  Localization.srv  SaveMap.srv
